--- a/kiss.vcxproj.filters
+++ b/kiss.vcxproj.filters
@@ -33,9 +33,6 @@
     <Filter Include="RenderEngine\RenderTarget">
       <UniqueIdentifier>{ed3ad2d2-4c01-4704-948a-ac15844ed8b4}</UniqueIdentifier>
     </Filter>
-    <Filter Include="shared\GL">
-      <UniqueIdentifier>{a8e4143c-a607-4ed8-b446-d645ffaf245b}</UniqueIdentifier>
-    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="SceneObject.cpp">
@@ -56,9 +53,6 @@
     <ClCompile Include="Particle Subsystem\ParticleSystem.cpp">
       <Filter>Particle Subsystem</Filter>
     </ClCompile>
-    <ClCompile Include="shared_include\Matrix4x4.cpp">
-      <Filter>shared</Filter>
-    </ClCompile>
     <ClCompile Include="RenderEngine\GLRenderer.cpp">
       <Filter>RenderEngine</Filter>
     </ClCompile>
@@ -67,9 +61,6 @@
     </ClCompile>
     <ClCompile Include="SceneManagement\Camera.cpp">
       <Filter>SceneManagement</Filter>
-    </ClCompile>
-    <ClCompile Include="shared_include\ErrorNotify.cpp">
-      <Filter>shared</Filter>
     </ClCompile>
     <ClCompile Include="RenderEngine\RenderTarget.cpp">
       <Filter>RenderEngine\RenderTarget</Filter>
@@ -89,8 +80,14 @@
     <ClCompile Include="AssetLoader\kissModel.cpp">
       <Filter>AssetLoader</Filter>
     </ClCompile>
-    <ClCompile Include="shared_include\GL\glew.c">
-      <Filter>shared\GL</Filter>
+    <ClCompile Include="include\ErrorNotify.cpp">
+      <Filter>shared</Filter>
+    </ClCompile>
+    <ClCompile Include="include\Matrix4x4.cpp">
+      <Filter>shared</Filter>
+    </ClCompile>
+    <ClCompile Include="include\RenderData.cpp">
+      <Filter>shared</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -112,12 +109,6 @@
     <ClInclude Include="Particle Subsystem\ParticleSystem.h">
       <Filter>Particle Subsystem</Filter>
     </ClInclude>
-    <ClInclude Include="shared_include\Structs.h">
-      <Filter>shared</Filter>
-    </ClInclude>
-    <ClInclude Include="shared_include\Matrix4x4.h">
-      <Filter>shared</Filter>
-    </ClInclude>
     <ClInclude Include="RenderEngine\GLRenderer.h">
       <Filter>RenderEngine</Filter>
     </ClInclude>
@@ -127,23 +118,11 @@
     <ClInclude Include="SceneManagement\Camera.h">
       <Filter>SceneManagement</Filter>
     </ClInclude>
-    <ClInclude Include="shared_include\ErrorNotify.h">
-      <Filter>shared</Filter>
-    </ClInclude>
     <ClInclude Include="RenderEngine\RenderTarget.h">
       <Filter>RenderEngine\RenderTarget</Filter>
     </ClInclude>
     <ClInclude Include="RenderEngine\RenderResourceFactory.h">
       <Filter>RenderEngine</Filter>
-    </ClInclude>
-    <ClInclude Include="shared_include\Macros.h">
-      <Filter>shared</Filter>
-    </ClInclude>
-    <ClInclude Include="shared_include\Defines.h">
-      <Filter>shared</Filter>
-    </ClInclude>
-    <ClInclude Include="shared_include\RenderData.h">
-      <Filter>shared</Filter>
     </ClInclude>
     <ClInclude Include="AppLayer\Service.h">
       <Filter>AppLayer</Filter>
@@ -160,16 +139,40 @@
     <ClInclude Include="AssetLoader\kissModel.h">
       <Filter>AssetLoader</Filter>
     </ClInclude>
-    <ClInclude Include="shared_include\GL\glew.h">
-      <Filter>shared\GL</Filter>
+    <ClInclude Include="include\defines.h">
+      <Filter>shared</Filter>
+    </ClInclude>
+    <ClInclude Include="include\Delegate.h">
+      <Filter>shared</Filter>
+    </ClInclude>
+    <ClInclude Include="include\ErrorNotify.h">
+      <Filter>shared</Filter>
+    </ClInclude>
+    <ClInclude Include="include\Macros.h">
+      <Filter>shared</Filter>
+    </ClInclude>
+    <ClInclude Include="include\Matrix4x4.h">
+      <Filter>shared</Filter>
+    </ClInclude>
+    <ClInclude Include="include\MiscUtils.h">
+      <Filter>shared</Filter>
+    </ClInclude>
+    <ClInclude Include="include\nvImage.h">
+      <Filter>shared</Filter>
+    </ClInclude>
+    <ClInclude Include="include\RenderData.h">
+      <Filter>shared</Filter>
+    </ClInclude>
+    <ClInclude Include="include\SOIL.h">
+      <Filter>shared</Filter>
+    </ClInclude>
+    <ClInclude Include="include\Structs.h">
+      <Filter>shared</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="media\programs\fireworks.cgfx">
       <Filter>Resource Files</Filter>
-    </None>
-    <None Include="shared_include\Structs.inl">
-      <Filter>shared</Filter>
     </None>
     <None Include="media\programs\fresnel.cgfx">
       <Filter>Resource Files</Filter>
@@ -182,6 +185,9 @@
     </None>
     <None Include="media\programs\basicLight.cgfx">
       <Filter>Resource Files</Filter>
+    </None>
+    <None Include="include\Structs.inl">
+      <Filter>shared</Filter>
     </None>
   </ItemGroup>
 </Project>
