--- a/kiss.vcxproj
+++ b/kiss.vcxproj
@@ -114,16 +114,21 @@
     <ClInclude Include="AssetLoader\kissModel.h" />
     <ClInclude Include="AssetLoader\rgbe.h" />
     <ClInclude Include="include\crc32.h" />
+    <ClInclude Include="include\Debug.h" />
     <ClInclude Include="include\defines.h" />
     <ClInclude Include="include\Delegate.h" />
+    <ClInclude Include="include\EnumReflector.h" />
+    <ClInclude Include="include\EnumString.h" />
     <ClInclude Include="include\ErrorNotify.h" />
     <ClInclude Include="include\Macros.h" />
     <ClInclude Include="include\Matrix4x4.h" />
     <ClInclude Include="include\MiscUtils.h" />
     <ClInclude Include="include\nvImage.h" />
+    <ClInclude Include="include\Reflector.h" />
     <ClInclude Include="include\RenderData.h" />
     <ClInclude Include="include\SOIL.h" />
     <ClInclude Include="include\Structs.h" />
+    <ClInclude Include="include\TypeUID.h" />
     <ClInclude Include="Particle Subsystem\ParticleSystem.h" />
     <ClInclude Include="Physics Subsystem\PhysicsManager.h" />
     <ClInclude Include="Physics Subsystem\PhysicsObject.h" />
